Added logo.png as a local file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </ul>
     </div>
 <section class="main">
-<img class="google-logo" src="google-homepage\Googlelogo_color_272x92dp.png" alt="google homepage" />
+<img class="google-logo" src="logo.png" alt="google homepage" />
   </section>
   <div class="my-form">
   <form method="GET" name="search box">
